# nuke-bloody-yahoo-email

./: .gitignore  README.md  pyproject.toml  setup.sh
src/yahoo_mail/: __main__.py  benchmark.py  client.py  constants.py  credentials.py  models.py
src/yahoo_mail/cli/: __init__.py  delete.py  folders.py  move.py  sender.py  status.py
